tests/ui/suggestions/type-ascription-instead-of-method.stderr
error: path separator must be a double colon
  --> $DIR/type-ascription-instead-of-method.rs:3:16
   |
LL |     let _ = Box:new("foo".to_string());
   |                ^ help: use a double colon instead: `::`
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: aborting due to previous error

